--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+# Project files
 utils/keygen.py
 *.csv
 !data/data-01-22.csv
 *.ipynb
+!1-data_api.ipynb
+!2-data_analysis.ipynb
 log/
 
 # Byte-compiled / optimized / DLL files
